# utdnsmasq

./: Cargo.toml  README.en.md  README.md  utdnsmasq.8  utdnsmasq.conf  utdnsmasq.service  utdnsmasq.uos
src/: cache.rs  cli.rs  config.rs  dhcp.rs  dnsmasq.rs  forward.rs  forward_init.rs  lease.rs  lib.rs  log.rs  logs.rs  main.rs  network.rs  option.rs  rfc1035.rs  rfc2131.rs  util.rs
tests/: cache_test.rs  config_test.rs  network_test.rs  rfc2131_test.rs  test.rs
