[package]
name = "utdnsmasq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
libc = "0.2"
signal-hook = "0.3"
if-addrs = "0.6"
nix = "0.23"
socket2 = "0.5"
get_if_addrs = "0.4"
daemonize = "0.4"
users = "0.11"
log = "0.4.22"
tklog = "0.2.4"
colored = "2.1.0"
mio = { version = "1.0", features = ["os-ext", "os-poll"] }
byteorder = "1.4"
regex = "1.5.4"
pnet = "0.35"
