[package]
name = "utdnsmasq"
version = "2.0.0"
edition = "2021"
description = "A Rust implementation of dnsmasq with full compatibility"
license = "GPL-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/utdnsmasq"
keywords = ["dns", "dhcp", "network", "server"]
categories = ["network-programming", "command-line-utilities"]


[dependencies]
nix = { version = "0.29", features = ["term", "signal", "fs", "socket", "user", "net"] }
regex = "1.5.4"
hostname = "0.4"
daemonize = "0.5"
users = "0.11"
mio = { version = "1.0", features = ["os-ext", "os-poll"] }

# 网络编程
socket2 = "0.6"
libc = "0.2"
pnet_datalink = "0.34"
pnet = "0.35"

# 配置解析
clap = { version = "4.0", features = ["derive"] }

# 日志系统
log = "0.4"
tklog = "0.2.4"
colored = "2.1.0"


# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 信号处理
signal-hook = "0.3"
signal-hook-tokio = "0.3"


# 随机数生成
rand = "0.8.5"

# 错误处理
thiserror = "1.0"

# 静态初始化
lazy_static = "1.4"


[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
